# GTRAC

./: .cproject  .project  .travis.yml  CMakeLists.txt  Makefile  README.md  VCF2VDBV-d.cpp  VCF2VDBV-h.cpp  VDBV2FASTA.cpp  config.ini  install.sh  qsmodel.cpp  qsmodel.h  rangecod.h  renorm95.c  run  run_test  tgc_kedar_2.1.3.1.cpp  tgc_kedar_2.1.3.cpp  tgc_kedar_2.1.5.cpp  tgc_kedar_2.1.5_single_file.cpp  tgc_kedar_decompress_2.1.3.1.cpp  tgc_kedar_decompress_2.1.3.cpp  tgc_kedar_decompress_2.1.5.1.cpp  tgc_kedar_decompress_2.1.5.1_single_file.cpp
include/: compressor.h  decompressor.h  hash_table.h  input_data.h  parser.h
src/: Makefile  VCF2VCFmin.cpp  VDBV2VCFmin-d.cpp  VDBV2VCFmin-h.cpp  compressor.cpp  decompressor.cpp  gtrac_compressor.cpp  gtrac_compressor_v1.cpp  gtrac_decompressor.cpp  gtrac_decompressor_v1.cpp  hash_table.cpp  input_data.cpp  input_data.h  misc.cpp  parser.cpp  rangecod.cpp  tgc.h  tgc_db.cpp
